--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<title></title>
 </head>
 <body>
-gjntrjnkhtrjhkt hello world
+To change the font size, go to Settings > Accessibility > Font Size, and adjust the slider on the screen. To change the display size.
 </body>
 </html>
