--- a/second.html
+++ b/second.html
@@ -5,7 +5,7 @@
 	<title></title>
 </head>
 <body>
-	<img src="../img 2.jpg" alt="img 2" width="700">
-					<a href="new_html.html">nextpage<img src="../img 2.jpg" alt="img 2" width="700"></a>
+	<img src="../img 5.jpg" alt="img 5" width="700">
+					<a href="index.html">nextpage<img src="../img 5.jpg" alt="img 5" width="700"></a>
 </body>
 </html>
