--- a/second.html
+++ b/second.html
@@ -5,13 +5,12 @@
 	<title></title>
 </head>
 <body>
-<<<<<<< HEAD
+
 	<img src="../img 5.jpg" alt="img 5" width="700">
 					<a href="index.html">nextpage<img src="../img 5.jpg" alt="img 5" width="700"></a>
-=======
+
 	<img src="../img 2.jpg" alt="img 2" width="700">
 					<a href="new_html.html">nextpage<img src="../img 5.jpg" alt="img 5" width="700"></a>
->>>>>>> bebe ornella ndamukumbuye mubyukuri.
-	<p>i like to watch movies</p>
+	<p>i like to  pray </p>
 </body>
 </html>
