--- a/dress.html
+++ b/dress.html
@@ -7,7 +7,8 @@
     
 img{border-radius: 30px;
      width: 200px;
-     height: 300px;}
+     height: 300px;
+    position: relative;}
 </style>
 </head>
 <body bgcolor="#2E2E2E">
