--- a/dress.html
+++ b/dress.html
@@ -23,7 +23,7 @@ img{border-radius: 30px;
 <a href="form.html"><img src="images/dress7.jpg"></a><br>
 <a href="form.html"><img src="images/dress8.jpg" ></a><br>
 <img src="images/dress9.jpg"></a>
-<p> pants</p>
+<p> coats and shoes</p>
 </div>
 </body>
 </html>
